# freemodbus-master-pico

./: CMakeLists.txt
modbus/functions/: mbfuncholding_m.c
modbus/include/: mb.h  mb_m.h  mbconfig.h  mbport.h
modbus/rtu/: mbrtu.h  mbrtu_m.c
port/: CMakeLists.txt  enervent_mb.c  enervent_mb.h  enervent_mb_agent.c  enervent_mb_agent.h  enervent_registers.c  enervent_registers.h  evlogging.h  registers.c  registers.h  user_mb_app_m.c  user_mb_app_m.h
port/RP2040/: port.c  port.h  portevent_m.c  portserial_m.c  porttimer_m.c
test/: CMakeLists.txt  main.c
